# agentops-sentinel

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/agentops_sentinel/: __init__.py  config.py  graph.py  guardrails.py  llm.py  runner.py  store.py  tracing.py
src/agentops_sentinel/agents/: __init__.py  base.py  critique.py  kb_agent.py  order_agent.py  refund_agent.py  supervisor.py
src/agentops_sentinel/api/: __init__.py  app.py
src/agentops_sentinel/dashboard/: index.html
src/agentops_sentinel/tools/: __init__.py  errors.py  kb_search.py  order_lookup.py  refund_tool.py
tests/: conftest.py  test_agents.py  test_api.py  test_graph_budget_exceeded.py  test_graph_escalation.py  test_graph_success.py  test_graph_tool_failure.py  test_guardrails.py  test_integration_redis.py  test_llm_fake.py  test_store.py  test_tools.py  test_tracing.py
