[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-sentinel"
version = "0.1.0"
description = "Reliable, observable, cost-bounded agentic workflows for support-ticket triage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentops_sentinel = ["dashboard/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires Docker/Redis/network; skipped by default",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
